--- a/src/xbuild/PlantingFrame.form
+++ b/src/xbuild/PlantingFrame.form
@@ -349,7 +349,7 @@
         </Component>
         <Component class="xbuild.Components.XDropdownTableComboBox" name="cbPLME">
           <Events>
-            <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="cbPLMEItemStateChanged"/>
+            <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="cbPLMEItemStateChanged1"/>
           </Events>
         </Component>
         <Component class="xbuild.Components.XDropdownTableComboBox" name="cbPLDS">
